Projects/yamls für projekt/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-database
  labels:
    app: counter-app
    app.kubernetes.io/part-of: counter-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-database
  template:
    metadata:
      labels:
        app: counter-database
    spec:
      volumes:
        - name: counter-database-data
          persistentVolumeClaim:
            claimName: counter-database-data
      containers:
        - name: counter-database
          resources: {}
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: counter-database-data
              mountPath: /var/lib/pgsql/data
          image: 'registry.redhat.io/rhel8/postgresql-15:latest'
          imagePullPolicy: Always
