Projects/yamls für projekt/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: counter-database
  labels:
    app: counter-app
    app.kubernetes.io/part-of: counter-app
spec:
  ports:
    - name: counter-database
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: counter-database

---

apiVersion: v1
kind: Service
metadata:
  name: counter-backend
spec:
  selector:
    app: counter-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
