Projects/yamls für projekt/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-backend
spec:
  to:
    kind: Service
    name: counter-backend
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-frontend
spec:
  to:
    kind: Service
    name: counter-frontend
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
